include/qkrylov/c_api.h

typedef struct qkrylov_device_vector_t* qkrylov_device_vector_h;
/* Single-Precision (FP32) Vector Operations */
QKRYLOV_API int   qkrylov_vector_dot_fp32(uint64_t dim, const float* x_complex, const float* y_complex, float* dot_re, float* dot_im);
QKRYLOV_API int   qkrylov_vector_norm_fp32(uint64_t dim, const float* x_complex, float* norm_out);
QKRYLOV_API int   qkrylov_vector_axpy_fp32(uint64_t dim, float a_re, float a_im, const float* x_complex, float* y_complex);
QKRYLOV_API int   qkrylov_vector_scal_fp32(uint64_t dim, float a_re, float a_im, float* x_complex);
QKRYLOV_API int   qkrylov_vector_normalize_fp32(uint64_t dim, float* x_complex);
QKRYLOV_API int   qkrylov_vector_zero_fill_fp32(uint64_t dim, float* x_complex);
QKRYLOV_API int   qkrylov_vector_copy_fp32(uint64_t dim, const float* src_complex, float* dst_complex);
/* Double-Precision (FP64) Vector Operations */
QKRYLOV_API int    qkrylov_vector_dot_fp64(uint64_t dim, const double* x_complex, const double* y_complex, double* dot_re, double* dot_im);
QKRYLOV_API int    qkrylov_vector_norm_fp64(uint64_t dim, const double* x_complex, double* norm_out);
QKRYLOV_API int    qkrylov_vector_axpy_fp64(uint64_t dim, double a_re, double a_im, const double* x_complex, double* y_complex);
QKRYLOV_API int    qkrylov_vector_scal_fp64(uint64_t dim, double a_re, double a_im, double* x_complex);
QKRYLOV_API int    qkrylov_vector_normalize_fp64(uint64_t dim, double* x_complex);
QKRYLOV_API int    qkrylov_vector_zero_fill_fp64(uint64_t dim, double* x_complex);
QKRYLOV_API int    qkrylov_vector_copy_fp64(uint64_t dim, const double* src_complex, double* dst_complex);
/* Default (FP64) Vector Operations */
QKRYLOV_API int    qkrylov_vector_dot(uint64_t dim, const double* x_complex, const double* y_complex, double* dot_re, double* dot_im);
QKRYLOV_API int    qkrylov_vector_norm(uint64_t dim, const double* x_complex, double* norm_out);
QKRYLOV_API int    qkrylov_vector_axpy(uint64_t dim, double a_re, double a_im, const double* x_complex, double* y_complex);
QKRYLOV_API int    qkrylov_vector_scal(uint64_t dim, double a_re, double a_im, double* x_complex);
QKRYLOV_API int    qkrylov_vector_normalize(uint64_t dim, double* x_complex);
QKRYLOV_API int    qkrylov_vector_zero_fill(uint64_t dim, double* x_complex);
QKRYLOV_API int    qkrylov_vector_copy(uint64_t dim, const double* src_complex, double* dst_complex);
QKRYLOV_API int                     qkrylov_device_vector_dot_fp32(const qkrylov_device_vector_h x, const qkrylov_device_vector_h y, float* dot_re, float* dot_im);
QKRYLOV_API int                     qkrylov_device_vector_norm_fp32(const qkrylov_device_vector_h x, float* norm_out);
QKRYLOV_API int                     qkrylov_device_vector_axpy_fp32(float a_re, float a_im, const qkrylov_device_vector_h x, qkrylov_device_vector_h y);
QKRYLOV_API int                     qkrylov_device_vector_scal_fp32(float a_re, float a_im, qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_normalize_fp32(qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_zero_fill_fp32(qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_copy_fp32(const qkrylov_device_vector_h src, qkrylov_device_vector_h dst);
QKRYLOV_API int                     qkrylov_device_vector_dot_fp64(const qkrylov_device_vector_h x, const qkrylov_device_vector_h y, double* dot_re, double* dot_im);
QKRYLOV_API int                     qkrylov_device_vector_norm_fp64(const qkrylov_device_vector_h x, double* norm_out);
QKRYLOV_API int                     qkrylov_device_vector_axpy_fp64(double a_re, double a_im, const qkrylov_device_vector_h x, qkrylov_device_vector_h y);
QKRYLOV_API int                     qkrylov_device_vector_scal_fp64(double a_re, double a_im, qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_normalize_fp64(qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_zero_fill_fp64(qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_copy_fp64(const qkrylov_device_vector_h src, qkrylov_device_vector_h dst);
QKRYLOV_API int                     qkrylov_device_vector_dot(const qkrylov_device_vector_h x, const qkrylov_device_vector_h y, double* dot_re, double* dot_im);
QKRYLOV_API int                     qkrylov_device_vector_norm(const qkrylov_device_vector_h x, double* norm_out);
QKRYLOV_API int                     qkrylov_device_vector_axpy(double a_re, double a_im, const qkrylov_device_vector_h x, qkrylov_device_vector_h y);
QKRYLOV_API int                     qkrylov_device_vector_scal(double a_re, double a_im, qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_normalize(qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_zero_fill(qkrylov_device_vector_h x);
QKRYLOV_API int                     qkrylov_device_vector_copy(const qkrylov_device_vector_h src, qkrylov_device_vector_h dst);